# MIDItraining

./: .gitignore  CMakeLists.txt  HMM.py  README.md  testseqsaving.txt  training_sequence.txt
source/: HighlightKeyboard.cpp  HighlightKeyboard.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
